Update Travis for Java9