@@ -2,40 +2,45 @@
 set -euo pipefail
 
 #
-# A (too) old version of JDK8 is installed by default on Travis.
-# This method is preferred over Travis apt oracle-java8-installer because
+# A (too) old version of JDK may be installed by default on Travis.
+# This method is preferred over Travis apt installer because
 # JDK is kept in cache. It does not need to be downloaded from Oracle
 # at each build.
 #
-function installJdk8 {
-  echo "Setup JDK 1.8u131"
+function installJdk {
+  echo "Setup JDK 9.0.4"
   mkdir -p ~/jvm
   pushd ~/jvm > /dev/null
-  if [ ! -d "jdk1.8.0_131" ]; then
-    echo "Download JDK8"
-    wget --no-check-certificate -c --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u131-b11/d54c1d3a095b4ff2b6607d096fa80163/jdk-8u131-linux-x64.tar.gz
-    tar xzf jdk-8u131-linux-x64.tar.gz
-    rm jdk-8u131-linux-x64.tar.gz
+  if [ ! -d "jdk-9.0.4" ]; then
+    echo "Download JDK9"
+    wget --no-cookies --no-check-certificate --header "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" "http://download.oracle.com/otn-pub/java/jdk/9.0.4+11/c2514751926b4512b076cc82f959763f/jdk-9.0.4_linux-x64_bin.tar.gz"
+    tar xzf jdk-9.0.4_linux-x64_bin.tar.gz
+    rm jdk-9.0.4_linux-x64_bin.tar.gz
   fi
   popd > /dev/null
-  export JAVA_HOME=~/jvm/jdk1.8.0_131
+  export JAVA_HOME=~/jvm/jdk-9.0.4
   export PATH=$JAVA_HOME/bin:$PATH
 }
 
 #
-# Maven 3.2.5 is installed by default on Travis. Maven 3.3.9 is preferred.
+# A (too) old version of Maven may be installed by default on Travis.
+# This method is preferred over Travis apt installer because
+# JDK is kept in cache.
 #
 function installMaven {
   echo "Setup Maven"
   mkdir -p ~/maven
   pushd ~/maven > /dev/null
-  if [ ! -d "apache-maven-3.3.9" ]; then
-    echo "Download Maven 3.3.9"
-    curl -sSL http://apache.mirrors.ovh.net/ftp.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz | tar zx -C ~/maven
+  if [ ! -d "apache-maven-3.5.2" ]; then
+    echo "Download Maven 3.5.2"
+    curl -sSL http://apache.mirrors.ovh.net/ftp.apache.org/dist/maven/maven-3/3.5.2/binaries/apache-maven-3.5.2-bin.tar.gz | tar zx -C ~/maven
   fi
   popd > /dev/null
-  export M2_HOME=~/maven/apache-maven-3.3.9
+  export M2_HOME=~/maven/apache-maven-3.5.2
   export PATH=$M2_HOME/bin:$PATH
+  echo '<settings><profiles><profile><id>spring-milestone</id><repositories>' > $M2_HOME/conf/settings.xml
+  echo '<repository><id>spring-milestone</id><url>http://repo.spring.io/milestone/</url></repository>' >> $M2_HOME/conf/settings.xml
+  echo '</repositories></profile></profiles><activeProfiles><activeProfile>spring-milestone</activeProfile></activeProfiles></settings>' >> $M2_HOME/conf/settings.xml
 }
 
 #
@@ -66,12 +71,12 @@ function installMaven {
 # PROJECT_VERSION=6.3
 #
 function fixBuildVersion {
-  export INITIAL_VERSION=$(maven_expression "project.version")
-  echo "Current version : $INITIAL_VERSION"
+  echo "Create a clean build version ..."
+  export INITIAL_VERSION=$(maven_expression "project.version -Dskip-sonarsource-repo=true")
+  echo "INITIAL_VERSION : $INITIAL_VERSION"
 
   # remove suffix -SNAPSHOT or -RC
   without_suffix=$(echo $INITIAL_VERSION | sed "s/-.*//g")
-  echo "Current no suffix version : $without_suffix"
 
   IFS=$'.'
   fields_count=$(echo $without_suffix | wc -w)
@@ -109,14 +114,14 @@ case "$TARGET" in
 
 BUILD)
 
-  installJdk8
+  installJdk
   installMaven
   fixBuildVersion
 
   # Minimal Maven settings
   export MAVEN_OPTS="-Xmx1G -Xms128m"
   export DISPLAY=:0.0
-  MAVEN_ARGS="-Dmaven.test.redirectTestOutputToFile=false -Djava.net.preferIPv4Stack=true -Dsurefire.useFile=false -B -e -V -DbuildVersion=$BUILD_VERSION"
+  MAVEN_ARGS="-Dmaven.test.redirectTestOutputToFile=false -Djava.net.preferIPv4Stack=true -Dsurefire.useFile=false -B -e -V -DbuildVersion=$BUILD_VERSION -Dskip-sonarsource-repo=true"
 
   if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
     echo 'Build and analyze master'
@@ -141,6 +146,7 @@ BUILD)
           -Dmaven.ut.reuseForks=true -Dmaven.it.reuseForks=false \
           -Djava.awt.headless=true
 
+	MAVEN_OPTS="$MAVEN_OPTS -noverify --add-modules java.xml.bind"
     mvn coveralls:report \
           $MAVEN_ARGS
 
